  by using ApiQueryImageInfo
* (bug 28226) prop=extlinks&eloffset should be an integer
* (bug 28070) Fix watchlist RSS for databases that store timestamps in a 
  real timestamp field.
* API upload errors may now return the parameter that needs to be changed and
  a sessionkey to fix the error.
* (bug 28249) allow dupes in meta=allmessages&amargs

=== Languages updated in 1.18 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Liv (liv) (new)

* (bug 17160) Gender specific display text for User namespace
* Link trail added for sl and sh
* (bug 27633) Add characters to linkTrail for Potuguese (pt and pt-br)
* (bug 27426) Set $namespaceGenderAliases for Arabic (ar)
* (bug 27385) Set Polish $namespaceGenderAliases
* (bug 27681) Set $namespaceGenderAliases for Portuguese (pt and pt-br)
* (bug 27785) Fallback language for Kabardian (kbd) is English now.
* (bug 27825) Raw watchlist edit message now uses formatted numbers.
* (bug 28040) Turkish: properly lower case 'I' to 'ı' (dotless i) and
  uppercase 'i' to 'İ' (dotted i)

== Compatibility ==

MediaWiki 1.18 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.18 has several database changes since 1.17, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could